Thu May  2 18:27:13 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in, lib/mkmf.rb: use 'do...end' instead of '{}' for
	  Borland make.

Mon Apr 29 18:46:42 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_find_file): load must be done from an abolute path if
	  $SAFE >= 4.

Sun Apr 28 17:01:56 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (insert): fix prototype for ANSI C.

Fri Apr 26 13:41:00 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_s_quote): quote whitespaces for /x cases.

Wed Apr 24 14:21:41 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: set size of the initial stack from
	  2MB to 32MB on MinGW/Cygwin.

	* util.c (push_element): avoid warning for djgpp.

Wed Apr 24 01:16:14 2002  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): should print depend file when
	  make is other than nmake.

Wed Apr 24 00:42:41 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/extmk.rb.in (create_makefile): use `{$(srcdir)}' directive instead
	  of `$(srcdir)/' when including depend file.

	* lib/mkmf.rb (create_makefile): add `{$(srcdir)}' when including depend
	  file.

Mon Apr 22 09:31:30 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_cleanup): should not terminate main_thread by
	  Fatal error.

	* regex.c (is_in_list): need to not exclude NUL and NEWLINE.

Sat Apr 20 00:19:13 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_expr_str): wrong backslash escapement.

	* re.c (rb_reg_expr_str): do not escape embedded space
	  characters.

Fri Apr 19 17:06:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/socket/extconf.rb: include <windows.h>, <winsock.h> on _WIN32.
	
Fri Apr 19 01:08:20 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_cleanup): current thread may be THREAD_STOPPED,
	  for example when terminated from signal handler.

Wed Apr 17 16:53:33 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
